src/pages/[schedule].module.scss
@import 'styles/variables.scss';

.hero {
  --tile-size: 60px;
  z-index: 1;

  .hero-content {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: space-between;

    @media (max-width: $screen-lg) {
      :global(.button) {
        display: none !important;
      }
    }
  }
}

.edition-istanbul {
  --first-edition-color-1: #85c3b4;
  --first-edition-color-2: #f9fffe;
  --first-edition-color-3: #c8efe6;
  --second-edition-color-1: #d78bfd;
  --second-edition-color-2: hsl(274, 64%, 98%);
  --second-edition-color-3: #f3e4ff;
  --third-edition-color-1: #ff8c72;
  --third-edition-color-2: #fcf6f5;
  --third-edition-color-3: #fbe9e6;
}

.edition-amsterdam {
  --first-edition-color-1: #0085ff;
  --first-edition-color-2: #f8fcff;
  --first-edition-color-3: #e3f3ff;
  --second-edition-color-1: #ff9b00;
  --second-edition-color-2: #fffaf8;
  --second-edition-color-3: #ffece4;
  --third-edition-color-1: #ff2a00;
  --third-edition-color-2: #fff8f8;
  --third-edition-color-3: #ffebeb;
}

.schedule {
  background: white;
  color: black;
  --icon-color: black;

  :global(.react-toggle--checked .react-toggle-track) {
    background-color: #8F78FB !important;
  }

  :global(.react-toggle--checked .react-toggle-thumb) {
    border-color: #8F78FB !important;
  }

  .header-row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    margin-bottom: 16px;
    color: $monochrome-6;

    @media (min-width: $screen-lg) {
      margin-bottom: 20px;
      margin-bottom: 8px;
    }
  }

  .top-bar-wrapper {
    @media (max-width: $screen-lg) {
      grid-column: 2 / 4;
    }
  }

  .top-bar {
    max-width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    // flex-wrap: wrap;
    flex-wrap: nowrap;
    margin-bottom: 4px;
    background: #FCFCFC;

    .second-row {
      margin-top: 16px;
      margin-bottom: 12px;
      display: flex;
      justify-content: space-between;
      flex-wrap: nowrap;
      align-items: center;
      width: 100%;

      // Some padding for scrolling gradient
      @media (max-width: $screen-sm) {
        > * {
          &:last-child {
            padding-right: 32px;
          }
        }
      }

      > * {
        flex-shrink: 0;
      }
    }

    .types {
      display: flex;
      justify-content: flex-start;
      margin-left: 16px;
      margin-bottom: 2px;
      flex-grow: 1;
      align-items: center;
      margin-right: 16px;
      
      > * {
        display: flex;
        align-items: center;
        margin-right: 8px;
        font-size: 12px;
        font-weight: bold;

        &:last-child {
          margin-right: 0px;
        }

        .indicator {
          margin-right: 4px;
          opacity: 0.6;
        }

        &.all-welcome {
          .indicator {
            color: var(--first-edition-color-1);
          }
        }

        &.intermediate {
          .indicator {
            color: var(--second-edition-color-1);
          }
        }

        &.advanced {
          .indicator {
            color: var(--third-edition-color-1);
          }
        }
      }
    }

    .expand-container {
      display: none;

      @media (min-width: $screen-lg) {
        display: inline-block;
      }
    }
  }
}

.event {
  border-top-width: 4px !important;
  border-width: 1px;
}

.event-in-table {
  border-width: 1px;
  border-top-width: 4px !important;

  @media (min-width: $screen-lg) {
    // border-top-width: 1px !important;
    // border-left-width: 4px !important;
  }
}
/* ... */

